--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "kayana-studio",
+  "name": "massabumi21",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.1",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
@@ -12,6 +13,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "algoliasearch": "^4.9.1",
+    "axios": "^0.21.1",
     "framer-motion": "^4.1.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
