--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "algoliasearch": "^4.9.1",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.16",
+    "markdown-to-jsx": "^7.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-inner-image-zoom": "^2.0.1",
+    "react-markdown": "^7.0.1",
     "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "remark-gfm": "^2.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
