--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-inner-image-zoom": "^2.0.1",
+    "react-loading-skeleton": "^2.2.0",
     "react-markdown": "^7.0.1",
     "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.18",
