--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^4.1.16",
     "markdown-to-jsx": "^7.1.3",
     "react": "^17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-inner-image-zoom": "^2.0.1",
